# Full-POS

./: .dockerignore  .env.example  .gitignore  .txt  CLAUDE.md  Dockerfile  Dockerfile.worker  Plan.txt  README.md  context.txt  docker-compose.prod.yml  docker-compose.yml  plan-phases.txt  plan.txt  pyproject.toml  understanding.txt
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 03b3d42e1ef8_vendors_purchase_orders_stock_counts_.py  040d78934696_cash_drawer_tables.py  05fede78a55e_organizations_multi_branch.py  122f2270dfbc_loyalty_referrals_and_nps.py  133d88b69631_merge_menu_availability_approval_and_.py  1b4d8479d894_merge_wallet_tickets_catalog_heads.py  23fe040d7fe8_customer_loyalty_points.py  28a9524d6396_cross_branch_stock_transfers.py  324ef2b2bb9b_shifts.py  (+99 more)
desktop/: .gitignore  electron-builder.yml  package-lock.json  package.json  tsconfig.json
docs/: ADVANCED_POS_FEATURE_IMPLEMENTATION_STATUS.md  AGGREGATOR_API_REFERENCE.md  API_REFERENCE.md  FULL_PRODUCT_FEATURE_CATALOG.md  GAP_LIST.md  IMPLEMENTATION_STATUS.md  PLATFORM_FEATURES_REFERENCE.md  POS_100_FEATURE_AUDIT_2026-07-08.md  POS_FEATURE_GAP_ANALYSIS.md  ROLE_SCREEN_FEATURE_PLACEMENT.md  TRADITIONAL_POS_SYSTEM.md  architecture.md  customer-order-habits.md  deployment.md  enhancement.md  observability.md  prompt-inventory.md  prompt-patterns.md  todays-special-cron.md  voice-phone-ordering-reference.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
graphify-out/: .graphify_analysis.json  .graphify_incremental.json  .graphify_labels.json  .graphify_python  .graphify_semantic_marker  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
load/: README.md  locustfile.py
ops/: secrets_audit.py
rider-app/: .env.example  .gitignore  App.tsx  MapPanel.tsx  README.md  api.ts  app.config.js  app.json  eas.json  maps.ts  notifications.ts  package-lock.json  package.json  tasks.ts
scripts/: _compare_waba_subs.py  _lims_recompress_publish.py  build_cratis_doc.py  build_cratis_impl_doc.py  build_cratis_overview.py  delete_restaurants.py  dev_db_bootstrap.sh  enable_partner_for_test.py  lint_prompt_spec_refs.py  phase0_webhook_table.sql  phase1_order_pos_fields.sql  prod-smoke.sh  purge_orders.py  reset_test_data.py  review_prompt_regression.py  run_live.ps1  seed_demo_tables.py  seed_dev.py  seed_dummy_restaurant.py  seed_partner_sandbox.py  seed_station_routing.py  simulate_pos_lifecycle.py  stop_live.ps1  sync_prompt_kb.py  temp_pos.py  test_phase0_webhook_live.py
terminals/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/: Cratis x CatalystIQ.pptx  conftest.py  test_audit.py  test_config.py  test_health.py  test_lifespan.py  test_metrics.py  test_simulator.py  test_simulator_ordering.py
(+1270 files in other folders)
