[project]
name = "restaurant-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    # Celery imports tzlocal at startup and resolves Asia/Dubai via zoneinfo;
    # declare both explicitly so the offline wheel build (Dockerfile) always
    # bundles them (python:3.12-slim ships no system zoneinfo, and a stale
    # wheel cache predating celery's tzlocal dep otherwise omits it -> the
    # runtime import crashed with ModuleNotFoundError: tzlocal).
    "tzlocal>=5.2",
    "tzdata>=2024.1",
    "redis>=5.0",
    "argon2-cffi>=23",
    "pyjwt>=2.9",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "ortools>=9.11",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.6",
    "httpx>=0.27",
    "ruff>=0.5",
    "locust>=2.29",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
# Ensure the worktree's own src/ is found first — the shared .venv editable
# install points at the parent workspace's src/, so without this override the
# parent's app.llm.fake (etc.) would shadow the worktree's versions.
pythonpath = ["src"]
filterwarnings = [
    # FastAPI 0.115 deprecated old HTTP status constant names — harmless until 1.0
    "ignore::DeprecationWarning:starlette.*",
]
markers = [
    "eval: transcript-replay capability/regression evals (W0 harness)",
]

[tool.ruff]
line-length = 100
src = ["src", "apps", "tests"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
